--- a/templates/user/inventory.html.twig
+++ b/templates/user/inventory.html.twig
@@ -45,7 +45,7 @@
                         </div>
                         <div id="drop6" style="width:55px;height:55px;margin-bottom: 14px;border: solid;">
                             {% if equipement.potion %}
-                                <img id="arme{{ equipement.potion.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/potions/')}}{{equipement.potion.potion.sprite}}" alt="sprite" onclick="transferPotion(event, '{{ equipement.potion.id }}')">
+                                <img id="potion{{ equipement.potion.id }}" class="item" style="width:50px;height:50px;margin-right: 10px" src="{{asset('sprites/potions/')}}{{equipement.potion.potion.sprite}}" alt="sprite" onclick="transferPotion(event, '{{ equipement.potion.id }}')">
                             {% endif %}
                         </div>
                         <div id="div-to-refresh">
